Updated meeting minutes

--- a/deliverables/Minutes/minutes-2024-08-27.md
+++ b/deliverables/Minutes/minutes-2024-08-27.md
@@ -20,6 +20,14 @@ These are generally distilled from the notes. Essentially, these are "by the nex
 * Jessica: 
   * Item 1: Create team Discord
   * Item 2: Invite all team members to the board
+* Liliane: 
+  * Item 1:
+* Ethan: 
+  * Item 1:
+* Ben: 
+  * Item 1:
+* Abeet: 
+  * Item 1:
 
 ## Signatures
 After the notes and action items have been pushed, each person should take a time to review them. If everything is agreeable, push a single commit with your name as a signature. 
