--- a/deliverables/Minutes/minutes-2024-09-04.md
+++ b/deliverables/Minutes/minutes-2024-09-04.md
@@ -23,22 +23,18 @@ These are generally distilled from the notes. Essentially, these are "by the nex
 * Jessica
   * Item 1
   * Item 2
-* Person 2
-  * Item 1
-  * Item 2
-* Person 3
-  * Item 1
-  * Item 2
-* Person 1
-  * Item 1
-  * Item 2
-* Person 1
-  * Item 1
-  * Item 2
+* Liliane: 
+  * Item 1:
+* Ethan: 
+  * Item 1:
+* Ben: 
+  * Item 1:
+* Abeet: 
+  * Item 1:
 
 ## Signatures
 After the notes and action items have been pushed, each person should take a time to review them. If everything is agreeable, push a single commit with your name as a signature. 
-* Person 1
+* Jessica Venema (scribe)
 * ...
 * ...
 * ...
