--- a/deliverables/Minutes/minutes-2024-08-29.md
+++ b/deliverables/Minutes/minutes-2024-08-29.md
@@ -54,7 +54,7 @@ These are generally distilled from the notes. Essentially, these are "by the nex
 ## Signatures
 After the notes and action items have been pushed, each person should take a time to review them. If everything is agreeable, push a single commit with your name as a signature. 
 * Jessica Venema (scribe)
-* Person 1
+* Ethan Schultz
 * Person 1
 * Person 1
 * Person 1
