--- a/deliverables/Minutes/minutes-2024-08-27.md
+++ b/deliverables/Minutes/minutes-2024-08-27.md
@@ -12,7 +12,7 @@ The scribe is the person taking the _notes_. This is encouraged to be a single p
 * Collection of contact data
 
 ## Notes
-* Jessica: I formed the initial team with Liliane, Ethan, and Ben.
+* Jessica: I formed the initial team with Liliane, Ethan, Abeet and Ben.
 	* I collected Discord names
 
 ## Action Items
