Meeting minutes signed

--- a/deliverables/Minutes/minutes-2024-08-27.md
+++ b/deliverables/Minutes/minutes-2024-08-27.md
@@ -34,5 +34,5 @@ After the notes and action items have been pushed, each person should take a tim
 * Jessica Venema (scribe)
 * Ethan Schultz
 * Liliane Owens
-* Person 1
+* Abit Mahato
 * Person 1
