Signed meeting minutes

--- a/deliverables/Minutes/minutes-2024-08-29.md
+++ b/deliverables/Minutes/minutes-2024-08-29.md
@@ -56,5 +56,5 @@ After the notes and action items have been pushed, each person should take a tim
 * Jessica Venema (scribe)
 * Ethan Schultz
 * Ben Hawk
-* APerson 1
+* Abit Mahato
 * Person 1
