--- a/deliverables/Minutes/minutes-2024-09-04.md
+++ b/deliverables/Minutes/minutes-2024-09-04.md
@@ -37,7 +37,7 @@ After the notes and action items have been pushed, each person should take a tim
 * Jessica Venema (scribe)
 * Ethan SChultz
 * Ben Hawk
-* .....
+* Abit mahato
 * ...
 
 -------------------------------------------------------------------------------------------------------
