--- a/deliverables/Minutes/minutes-2024-08-29.md
+++ b/deliverables/Minutes/minutes-2024-08-29.md
@@ -41,20 +41,12 @@ These are generally distilled from the notes. Essentially, these are "by the nex
   * Item 9: Create team repo
   * Item 10: Make sure all team members have access to the team repo
   * Item 11: Prepare for the Project Overview Proposal due next Friday at 5pm
-* Liliane: 
-  * Item 1:
-* Ethan: 
-  * Item 1:
-* Ben: 
-  * Item 1:
-* Abeet: 
-  * Item 1:
 
 
 ## Signatures
 After the notes and action items have been pushed, each person should take a time to review them. If everything is agreeable, push a single commit with your name as a signature. 
 * Jessica Venema (scribe)
-* Ethan Schultz
-* Ben Hawk
-* Abit Mahato
+* Person 1
+* Person 1
+* Person 1
 * Person 1
