created the Cat Math app - initial

--- a/deliverables/Minutes/minutes-2024-09-04.md
+++ b/deliverables/Minutes/minutes-2024-09-04.md
@@ -1,9 +1,9 @@
-# Meeting Minutes Wednesday, 9/04/24
+# Meeting Minutes Thursday, 8/29/24
 
 ## Administrivia
 The scribe is the person taking the _notes_. This is encouraged to be a single person to reduce problems.
-* Time: 8:30pm
-* Location: Discord - virtual
+* Time: noon
+* Location: In Class
 * Scribe: Jessica
 
 ## Agenda
