updating meeting minutes

--- a/deliverables/Minutes/minutes-2024-10-22.md
+++ b/deliverables/Minutes/minutes-2024-10-22.md
@@ -1,33 +1,47 @@
-# Meeting Minutes (DATE)
+# Meeting Minutes 22 October 2024
 
 ## Administrivia
+
 The scribe is the person taking the _notes_. This is encouraged to be a single person to reduce problems.
-* Time: _time_
-* Location: _location_ (virtual?)
-* Scribe: _person_
+* Time: 11am
+* Location: In Class
+* Scribe: Jessica Venema
 
 ## Agenda
-* Item 1
-  * Sub-item 1:
-  * ...
-* ...
+
+* Assign tasks in Tiaga
+
+* Merge management: git pull or fork the project, get your work up and running, do a pull request before the meeting on Sunday
 
 ## Notes
-* Person 1: _statement_
-  * Person 3: _follow on statement_
-* Person 2: _statement_
-* ...
+
+* Jessica: Ethan is out sick.
+* Jessica: We have 5 weeks to finish coding.
+* Jessica: Assign tasks in Tiaga.
+
+* Liliane: Forked the repo to have her own branch.
+
+* In Class exercise - Design Patterns - Behavoral Design Pattern: Obsserver
+  - ![Behavoral Design Pattern: Obsserver](./Pics/2024-10-22 11.59.34.jpg/)
 
 ## Action Items
+
 These are generally distilled from the notes. Essentially, these are "by the next meetings, _this person_ will take _this action_."
-* Person 1
-  * Item 1
-  * Item 2
-* Person 2
-  * ...
-* ...
+* Jessica: 
+  * Item 1: Assign Tiaga tasks
+  * Item 2: Plan out a merging strategy
+  * Item 3: Finish up meeting notes
+  * Item 4: Assigned Buttons in Tiaga
+* Liliane: 
+  * Item 1: Assigned Calculator screen in Tiaga
+* Ethan: 
+  * Item 1: Assigned Top Bar in Tiaga
+* Ben: 
+  * Item 1: Assigned Math Drill Screen
+* Abeet: 
+  * Item 1: Assigned Pop-Up Screen
 
 ## Signatures
-After the notes and action items have been pushed, each person should take a time to review them. If everything is agreeable, push a single commit with your name as a signature. 
-* Person 1
+
+* Jessica Venema
 * ...
