updating meeting minutes

--- a/deliverables/Minutes/minutes-2024-10-22.md
+++ b/deliverables/Minutes/minutes-2024-10-22.md
@@ -21,8 +21,9 @@ The scribe is the person taking the _notes_. This is encouraged to be a single p
 
 * Liliane: Forked the repo to have her own branch.
 
-* In Class exercise - Design Patterns - Behavoral Design Pattern: Obsserver
-  - ![Behavoral Design Pattern: Obsserver](./Pics/2024-10-22 11.59.34.jpg/)
+* In Class exercise - Design Patterns - Behavoral Design Pattern: Observer
+  - ![Observer](./Pics/2024-10-22 11.59.34.jpg/)
+  - ![Ovserver](./Pics/2024-10-22 11.59.34.jpg/)
 
 ## Action Items
 
