--- a/deliverables/Minutes/minutes-2024-10-22.md
+++ b/deliverables/Minutes/minutes-2024-10-22.md
@@ -22,7 +22,7 @@ The scribe is the person taking the _notes_. This is encouraged to be a single p
 * Liliane: Forked the repo to have her own branch.
 
 * In Class exercise - Design Patterns - Behavoral Design Pattern: Observer
-  - ![Observer](~/Pics/DesignPatterns.jpg/)
+  - ![Observer](/Pics/DesignPatterns.jpg/)
 
 ## Action Items
 
