--- a/deliverables/Minutes/minutes-2024-09-12.md
+++ b/deliverables/Minutes/minutes-2024-09-12.md
@@ -38,7 +38,7 @@ After the notes and action items have been pushed, each person should take a tim
 * Ethan SChultz
 * Ben Hawk
 * Abit mahato
-* ...
+* Liliane Owens
 
 -------------------------------------------------------------------------------------------------------
 
