--- a/deliverables/Minutes/minutes-2024-10-22.md
+++ b/deliverables/Minutes/minutes-2024-10-22.md
@@ -44,4 +44,4 @@ These are generally distilled from the notes. Essentially, these are "by the nex
 ## Signatures
 
 * Jessica Venema
-* ...
+* Liliane Owens
