--- a/deliverables/Minutes/minutes-2024-11-3.md
+++ b/deliverables/Minutes/minutes-2024-11-3.md
@@ -32,4 +32,4 @@ These are generally distilled from the notes. Essentially, these are "by the nex
 ## Signatures
 
 * Jessica Venema
-* ...
+* Liliane Owens
